# sandbox.iot.beaglbone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindModbus.cmake
doc/: GPRS_GPS_Configuration files.rar  GPRS_GPS_Example_Code.c  XXX_CAPE_Angstrom_API.7z
doc/GPRS_GPS_Configuration files/: BB-BONE-GPS-GPRS-00A0.dtbo  gprs-connect-chat  init_GPS  init_modem  initcape  options  ppp-start
doc/XXX_CAPE_Angstrom_API/485_test/: Makefile  test_485  test_485.c
doc/XXX_CAPE_Angstrom_API/adc_test/: Makefile  test_adc  test_adc.c
doc/XXX_CAPE_Angstrom_API/at45db_test/: Makefile  test_at45db  test_at45db.c
doc/XXX_CAPE_Angstrom_API/ds18b20_test/: Makefile  test_ds18b20  test_ds18b20.c
doc/XXX_CAPE_Angstrom_API/key_test/: Makefile  test_key  test_key.c
doc/XXX_CAPE_Angstrom_API/lcd4_test/: test_lcd4.3
doc/XXX_CAPE_Angstrom_API/lcd7_test/: test_lcd7
doc/XXX_CAPE_Angstrom_API/led_test/: Makefile  test_led  test_led.c
doc/XXX_CAPE_Angstrom_API/mag3110_test/: Makefile  mag3110.c  mag3110.h  test_mag3110  test_mag3110.c
doc/XXX_CAPE_Angstrom_API/pwm_test/: Makefile  test_pwm  test_pwm.c
sample/: CMakeLists.txt
sample/src/: modbus-master.c  modbus-slave.c
script/: app-arm-linux-gnueabihf.sh  app.sh  build-arm-linux-gnueabihf.sh  deploy-arm-linux-gnueabihf.sh
script/setup/: prerequisites-armhf.sh  prerequisites.sh
scripts/setup/: prerequisites-armhf.sh  prerequisites.sh
test/: CMakeLists.txt
test/include/: ModbusTest.hpp
test/src/: ModbusTest.cpp
toolchains/: arm-linux-gnueabihf.cmake
(+4 files in other folders)
